--- a/EYESEE/app/src/main/AndroidManifest.xml
+++ b/EYESEE/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.TTS_SERVICE" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
