--- a/EYESEE/app/src/main/AndroidManifest.xml
+++ b/EYESEE/app/src/main/AndroidManifest.xml
@@ -4,13 +4,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_white"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EYESEE">
         <activity android:name=".MainActivity">
+            android:icon="@drawable/logo_white"
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.TTS_SERVICE" />
                 <category android:name="android.intent.category.LAUNCHER" />
